sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: illegal start of simple pattern
    for(int i = 0 ; i < nbVal-1 ; i++){
              ^AlgBubbleSort1:12: error: '<-' expected but ';' found.
    for(int i = 0 ; i < nbVal-1 ; i++){
                  ^AlgBubbleSort1:12: error: '<-' expected but ';' found.
    for(int i = 0 ; i < nbVal-1 ; i++){
                                ^AlgBubbleSort1:12: error: illegal start of simple pattern
    for(int i = 0 ; i < nbVal-1 ; i++){
                                     ^AlgBubbleSort1:21: error: illegal start of simple expression
}
^